# project-manager

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  README.md  index.html  mcp_server.py  pyproject.toml  workflow-manifest.json
ai-business-agent/: .env.example  CLAUDE.md  Dockerfile  claude-mcp-config.json  docker-compose.yml  pyproject.toml  setup.sh
ai-business-agent/src/: config.py  main.py  orchestrator.py
ai-business-agent/src/agents/: base.py  builder.py  compat.py  planning.py  sales.py
ai-business-agent/src/api/: auth.py  routes.py
ai-business-agent/src/memory/: models.py  store.py
ai-business-agent/src/providers/: base.py  claude_sdk_provider.py  registry.py
ai-business-agent/tests/: conftest.py  test_api.py  test_obsidian.py  test_plugin_builder.py
claude-config/: sync.sh
dashboard/: index.html
data/: business_context.json
docs/: gap-analysis-vof.md
obsidian/: CLAUDE.md  Project Template.md
src/: config.py  main.py
src/agents/: base.py  finance.py  marketing.py  sales.py
src/api/: routes.py  webhooks.py
src/connectors/: mcp_server.py  obsidian.py  plugin_builder.py
src/learning/: knowledge_base.py
src/memory/: models.py  store.py
src/providers/: __init__.py  anthropic_provider.py  ollama_provider.py  openai_provider.py
tests/: test_api.py  test_knowledge_base.py  test_memory_store.py  test_orchestrator.py  test_providers.py
workflows/: 1OoH4BvDSbjWEOjt__bevestig-en-bouw.json  D9p9wXEhC3YNvAl4__reset-project-session.json  GfmBMQOHUdegYA1o__stop-project-session.json  O75vuWXjLj__start-project-session.json  R8kLmNwPqT__update-obsidian-log.json  YnOWKjbAUdJM7R9O__new-project-session.json  n8n-examples.json  qYqZxOMNgbKCbeXT__voeg-taak-toe.json  xOXAVQQKh7EMWfOR__analyseer-taken.json
